--- a/robot.yaml
+++ b/robot.yaml
@@ -1,5 +1,5 @@
 tasks:
-  Run all tasks:
+  Certification_1_Run:
     shell: python -m robot --report NONE --outputdir output --logtitle "Task log" tasks.robot
 
 condaConfigFile: conda.yaml
